--- a/gtrainlovestory/gtrainlovestory.html
+++ b/gtrainlovestory/gtrainlovestory.html
@@ -169,7 +169,7 @@
                         <p>Then on September 15, 1776, The British Army invaded Manhattan Island. A mixed force of about 4,000 British regulars and Hessian mercenaries landed at what is now 34th Street in pursuit of Washington’s Continental Army.</p>
                         <p>General Howe and his British Army had hidden 75 flatboats and other small craft at the mouth of Newtown Creek, at the top of Greenpoint, Brooklyn. With the help of four warships, they were able to cross the East River, drive the Americans from the shore, and seize Kepp’s Bay. Washington’s Army withdrew in disorder but once again was saved from destruction by a rear guard of the Continental Army’s Maryland Regiments.</p>
                         <p>The American troops retreated toward Harlem Heights placing New York City firmly in British hands, where it would remain for the course of the war. However, the following day, the American’s did gain a victory at the Battle of Harlem Heights. Although control of the city had been ceded to the British, they had not won a decisive victory in stamping out the rebellion.</p>
-                        <a href="#" class="btn btn-ghost btn-accent btn-small">Check out the map</a>
+                        <a href="https://docs.google.com/document/d/1EoksU-zAklFcn1SHDltZhQP7JAhGDVShZl_mwZJgdXY/edit?usp=sharing" class="btn btn-ghost btn-accent btn-small">Read more history!</a>
                     </div>
                 </div>
             </div>
@@ -184,6 +184,10 @@
                 <p>Here's what you need to know.</p>
                 <a href="https://www.youtube.com/watch?v=8LmPBPWHJu4" class="btn btn-ghost btn-accent btn-large">Watch this</a>
                 <div class="logo-placeholder floating-logo"><img src="img/sketch-logo.png" alt="Sketch Logo"></div>
+                <br><br>
+                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc" width="640" height="480"></iframe>
+                <br><br>
+                <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing">view on Google Maps</a>
             </div>
         </div>
     </section>
@@ -331,7 +335,6 @@
                     <div class="footer-links">
                         <ul class="footer-group">
                             <li><a href="https://flic.kr/s/aHska486ks">wedding flickr album</a></li>
-                            <li><a href="https://docs.google.com/document/d/1EoksU-zAklFcn1SHDltZhQP7JAhGDVShZl_mwZJgdXY/edit?usp=sharing">more history</a></li>
                             <li><a href="https://instagram.com/chrisbup/">insta</a></li>
                             <li><a href="https://twitter.com/chrisbup">twitter</a></li>
                             <li><a href="http://www.sadtrombone.com/">sad trombone</a></li>
