--- a/gtrainlovestory/gtrainlovestory.html
+++ b/gtrainlovestory/gtrainlovestory.html
@@ -42,8 +42,7 @@
                                 <li><a href="#download">Zine</a></li>
                             </ul>
                             <ul class="member-actions">
-                                <li><a href="#download" class="login">Log in</a></li>
-                                <li><a href="#download" class="btn-white btn-small">Sign up</a></li>
+                                <li><a href="https://flic.kr/s/aHska486ksd" class="btn-white btn-small">Upload Your Photos</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -59,7 +58,7 @@
                     <div class="hero-content text-center">
                         <h1>#GTrainLoveStory</h1>
                         <p class="intro">Welcome to the official wedding page for Jillian and Chris.</p>
-                        <a href="#" class="btn btn-fill btn-large btn-margin-right">Download</a> <a href="#" class="btn btn-accent btn-large">Learn more</a>
+                        <a href="#" class="btn btn-fill btn-large btn-margin-center">Who We Are</a>
                     </div>
                 </div>
             </div>
@@ -177,6 +176,39 @@
         <div class="macbook-wrap wp3"></div>
         <div class="responsive-feature-img"><img src="img/macbook-pro.png" alt="responsive devices"></div>
     </section>
+    <section>
+        <div class="gallery">
+            <ul>
+                <li>
+                    <img src="img/jillian-chris/1.png" alt="photo 1">
+                </li>
+                <li>
+                    <img src="img/jillian-chris/2.png" alt="photo 2">
+                </li>
+                <li>
+                    <img src="img/jillian-chris/3.png" alt="photo 3">
+                </li>
+                <li>
+                    <img src="img/jillian-chris/4.png" alt="photo 4">
+                </li>
+                <li>
+                    <img src="img/jillian-chris/5.png" alt="photo 5">
+                </li>
+                <li>
+                    <img src="img/jillian-chris/6.png" alt="photo 6">
+                </li>
+                <li>
+                    <img src="img/jillian-chris/1.png" alt="photo 1">
+                </li>
+                <li>
+                    <img src="img/jillian-chris/2.png" alt="photo 2">
+                </li>
+                <li>
+                    <img src="img/jillian-chris/3.png" alt="photo 3">
+                </li>
+            </ul>
+        </div>
+    </section>
     <section class="hero-strip section-padding" id="blog">
         <div class="container">
             <div class="col-md-12 text-center">
@@ -196,8 +228,6 @@
             <div class="row">
                 <div class="col-md-12">
                     <h3>Freebies</h3>
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/o21mTbkaTw0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-                    <br><br>
                 </div>
             </div>
             <div class="row">
@@ -333,6 +363,7 @@
             <div class="row">
                 <div class="col-md-7">
                     <div class="footer-links">
+                        <iframe width="400" height="225" src="https://www.youtube.com/embed/o21mTbkaTw0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                         <ul class="footer-group">
                             <li><a href="https://flic.kr/s/aHska486ks">wedding flickr album</a></li>
                             <li><a href="https://instagram.com/chrisbup/">insta</a></li>
