update gtrain main content

--- a/gtrainlovestory/gtrainlovestory.html
+++ b/gtrainlovestory/gtrainlovestory.html
@@ -32,7 +32,7 @@
         <section class="navigation">
             <header>
                 <div class="header-content">
-                    <div class="logo"><a href="#"><img src="img/sedna-logo.png" alt="Sedna logo"></a></div>
+                    <div class="logo"><h3>C&J</h3></div>
                     <div class="header-nav">
                         <nav>
                             <ul class="primary-nav">
@@ -57,7 +57,7 @@
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center">
                         <h1>#GTrainLoveStory</h1>
-                        <p class="intro">Welcome to the official wedding page for Jillian and Chris.</p>
+                        <p class="intro">Welcome to the wedding page for Jillian and Chris.</p>
                         <a href="#" class="btn btn-fill btn-large btn-margin-center">Who We Are</a>
                     </div>
                 </div>
@@ -67,26 +67,23 @@
     </section>
     <section class="intro section-padding" id="features">
         <div class="container">
+            <div class="col-md-12 text-center">
+                <h2>Saturday &middot; Novermber 7 &middot; 2015</h2>
+                <h3>4:30pm</h3>
+                <h4>Brooklyn, New York</h4>
+                <hr>
+                <p>attire: <a href="http://www.realsimple.com/beauty-fashion/clothing/dress-code">semiformal</a> (or whatever suits you, pun intended).</p>
+            </div>
             <div class="row">
                 <div class="col-md-4 intro-feature">
                     <div class="intro-icon">
                         <span data-icon="&#xe033;" class="icon"></span>
                     </div>
                     <div class="intro-content">
+                        <p>ceremony</p>
                         <h5><a href="http://www.ascensionbrooklyn.org/">Church of the Ascension</a></h5>
-                        <p>Ceremony schedule</p>
-                        <ul>
-                            <li>prelude</li>
-                            <li>processional</li>
-                            <li>welcome</li>
-                            <li>readings</li>
-                            <li>exchange of vows</li>
-                            <li>exchange of rings</li>
-                            <li>recessional</li>
-                            <li>cocktails</li>
-                        </ul>
-                        <br>
-                        <p class="tighten">Rides to St. Mazie start at 5:15pm.</p>
+                        <p class="tighten">127 Kent Street near Manhattan Avenue</p>
+                        <img class="primary-pics" src="img/church-ascension.jpg" alt="Church of the Ascension">
                     </div>
                 </div>
                 <div class="col-md-4 intro-feature">
@@ -94,8 +91,10 @@
                         <span data-icon="&#xe030;" class="icon"></span>
                     </div>
                     <div class="intro-content">
+                        <p>dinner &middot; 6pm–8pm</p>
                         <h5><a href="http://www.stmazie.com/">St. Mazie</a></h5>
                         <p class="tighten">345 Grand Street near Havemeyer Street</p>
+                        <img class="primary-pics" src="img/st-mazie.jpg" alt="Saint Mazie Bar & Supper Club">
                     </div>
                 </div>
                 <div class="col-md-4 intro-feature">
@@ -103,10 +102,28 @@
                         <span data-icon="&#xe046;" class="icon"></span>
                     </div>
                     <div class="intro-content last">
+                        <p>drinks &middot; 8pm–10pm</p>
                         <h5><a href="http://www.larrylawrencebar.com/">Larry Lawrence Bar</a></h5>
-                        <p class="tighten">295 Grand Street on the other side of Havemeyer Street</p>
+                        <p class="tighten">295 Grand Street near Havemeyer Street</p>
+                        <img class="primary-pics" src="img/larry-lawrence.jpg" alt="Larry Lawrence Bar">
                     </div>
                 </div>
+            </div>
+            <hr>
+            <div class="col-md-12 text-center">
+                <h3>Ceremony schedule</h3>
+                <p>The ceremony take place at 4:30pm but guests can arrive and get settled beginning at 4pm.</p>
+                <ul>
+                    <li>prelude</li>
+                    <li>processional</li>
+                    <li>welcome</li>
+                    <li>readings</li>
+                    <li>exchange of vows</li>
+                    <li>exchange of rings</li>
+                    <li>recessional</li>
+                    <li>cocktails</li>
+                </ul>
+                <p class="tighten">Rides to St. Mazie start at 5:15pm.</p>
             </div>
         </div>
     </section>
@@ -115,16 +132,30 @@
             <div class="row">
                 <div class="col-md-5 col-md-offset-7">
                     <div class="feature-list">
-                        <h3>Jokes</h3>
-                        <p>For the people</p>
+                        <h3>Readings</h3>
                         <ul class="features-stack">
                             <li class="feature-item">
                                 <div class="feature-icon">
                                     <span data-icon="&#xe03e;" class="icon"></span>
                                 </div>
                                 <div class="feature-content">
-                                    <h6>Why can't you trust atoms?</h6>
-                                    <p class="tighten">They make everything up.</p>
+                                    <h5>Forever – is composed of Nows</h5>
+                                    <h6>by Emily Dickinson</h6>
+                                    <p class="tighten">Forever – is composed of Nows –</p>
+                                    <p class="tighten">‘Tis not a different time –</p>
+                                    <p class="tighten">Except for Infiniteness –</p>
+                                    <p class="tighten">And Latitude of Home –</p>
+                                    <br>
+                                    <p class="tighten">From this – experienced Here –</p>
+                                    <p class="tighten">Remove the Dates – to These –</p>
+                                    <p class="tighten">Let Months dissolve in further Months –</p>
+                                    <p class="tighten">And Years – exhale in Years –</p>
+                                    <br>
+                                    <p class="tighten">Without Debate – or Pause –</p>
+                                    <p class="tighten">Or Celebrated Days –</p>
+                                    <p class="tighten">No different Our Years would be</p>
+                                    <p class="tighten">From Anno Dominies –</p>
+                                    </p>
                                 </div>
                             </li>
                             <li class="feature-item">
@@ -132,17 +163,26 @@
                                     <span data-icon="&#xe040;" class="icon"></span>
                                 </div>
                                 <div class="feature-content">
-                                    <h6>A puff of helium floats into a bar. The bartender says, "Sorry, we don't serve noble gases here."</h6>
-                                    <p class="tighten">The helium doesn't react..</p>
-                                </div>
-                            </li>
-                            <li class="feature-item">
-                                <div class="feature-icon">
-                                    <span data-icon="&#xe03c;" class="icon"></span>
-                                </div>
-                                <div class="feature-content">
-                                    <h6>Moses and Jesus are playing golf. Moses steps up to the tee and hits a beautiful drive right down the fairway. Jesus gets up and hooks it into the bushes. But then Jesus raises his hand and a stream emerges, carrying the golf ball onto the fairway where a bird swoops down, picks it up and drops it right in the cup for a hole in one.</h6>
-                                    <p class="tighten">Moses says, “Are we gonna play golf or are we gonna fuck around?”</p>
+                                    <h5>Count That Day Lost </h5>
+                                    <h6>by George Eliot</h6>
+                                    <p class="tighten">If you sit down at set of sun</p>
+                                    <p class="tighten">And count the acts that you have done,</p>
+                                    <p class="tighten">And, counting, find</p>
+                                    <p class="tighten">One self-denying deed, one word</p>
+                                    <p class="tighten">That eased the heart of him who heard,</p>
+                                    <p class="tighten">One glance most kind</p>
+                                    <p class="tighten">That fell like sunshine where it went —</p>
+                                    <p class="tighten">Then you may count that day well spent.</p>
+                                    <br>
+                                    <p class="tighten">But if, through all the livelong day,</p>
+                                    <p class="tighten">You've cheered no heart, by yea or nay —</p>
+                                    <p class="tighten">If, through it all</p>
+                                    <p class="tighten">You've nothing done that you can trace</p>
+                                    <p class="tighten">That brought the sunshine to one face—</p>
+                                    <p class="tighten">No act most small</p>
+                                    <p class="tighten">That helped some soul and nothing cost —</p>
+                                    <p class="tighten">Then count that day as worse than lost.</p>
+                                    </p>
                                 </div>
                             </li>
                         </ul>
@@ -180,31 +220,31 @@
         <div class="gallery">
             <ul>
                 <li>
-                    <img src="img/jillian-chris/1.png" alt="photo 1">
+                    <img src="img/1.png" alt="photo 1">
                 </li>
                 <li>
-                    <img src="img/jillian-chris/2.png" alt="photo 2">
+                    <img src="img/2.png" alt="photo 2">
                 </li>
                 <li>
-                    <img src="img/jillian-chris/3.png" alt="photo 3">
+                    <img src="img/3.png" alt="photo 3">
                 </li>
                 <li>
-                    <img src="img/jillian-chris/4.png" alt="photo 4">
+                    <img src="img/4.png" alt="photo 4">
                 </li>
                 <li>
-                    <img src="img/jillian-chris/5.png" alt="photo 5">
+                    <img src="img/5.png" alt="photo 5">
                 </li>
                 <li>
-                    <img src="img/jillian-chris/6.png" alt="photo 6">
+                    <img src="img/6.png" alt="photo 6">
                 </li>
                 <li>
-                    <img src="img/jillian-chris/1.png" alt="photo 1">
+                    <img src="img/1.png" alt="photo 1">
                 </li>
                 <li>
-                    <img src="img/jillian-chris/2.png" alt="photo 2">
+                    <img src="img/2.png" alt="photo 2">
                 </li>
                 <li>
-                    <img src="img/jillian-chris/3.png" alt="photo 3">
+                    <img src="img/3.png" alt="photo 3">
                 </li>
             </ul>
         </div>
@@ -212,9 +252,9 @@
     <section class="hero-strip section-padding" id="blog">
         <div class="container">
             <div class="col-md-12 text-center">
-                <h2>Hello Brooklyn <span class="sketch">Fuck </span>Yeah</h2>
-                <p>Here's what you need to know.</p>
-                <a href="https://www.youtube.com/watch?v=8LmPBPWHJu4" class="btn btn-ghost btn-accent btn-large">Watch this</a>
+                <h2>Hello Brooklyn</h2>
+                <p>Here's our guide to the neighborhood for all you out-of-towners. Note: a lot of places in Brooklyn are cash only so be warned!</p>
+                <a href="https://www.youtube.com/watch?v=8LmPBPWHJu4" class="btn btn-ghost btn-accent btn-large">First, watch this!</a>
                 <div class="logo-placeholder floating-logo"><img src="img/sketch-logo.png" alt="Sketch Logo"></div>
                 <br><br>
                 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc" width="640" height="480"></iframe>
@@ -227,17 +267,28 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>Freebies</h3>
+                    <h3>Sharing is Caring</h3>
+                    <p>This is where we share a few of our favorite things and invite you to contribute yours.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
-                    <h5>Music for the ride</h5>
-                    <p>Spotify Playlist</p>
+                <div class="col-md-4">
+                    <h5>Music</h5>
+                    <p class="tighten">
+                        <a href="https://open.spotify.com/user/chrisbup/playlist/5nnW9xXgqzLS409lRUNjly">A little Spotify Playlist as a soundtrack for the weekend.</a>
+                    </p>
                 </div>
-                <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
+                <div class="col-md-4">
                     <h5>Recipes</h5>
-                    <p>To make when you get home</p>
+                    <p class="tighten">
+                        <a href="https://docs.google.com/spreadsheets/d/1tcP2LHFNipevTnqtIQIz8ml1mMNN8KcneizegfWN7Xw/edit?usp=sharing">These are our faves, now add yours!</a>
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Poetry</h5>
+                    <p class="tighten">
+                        <a href="https://docs.google.com/document/d/151MqwgSEeshA_asgdxuYytq90h4wlNQA5V1YSmZJOaM/edit?usp=sharing">Some you'll recognize, some you may not. Add your favorites and leave a comment with your name!</a>
+                    </p>
                 </div>
             </div>
         </div>
@@ -245,25 +296,7 @@
     <section class="blog text-center">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4">
-                    <article class="blog-post">
-                        <figure>
-                            <a href="img/blog-img-01.jpg" class="single_image">
-                                <div class="blog-img-wrap">
-                                    <div class="overlay">
-                                        <i class="fa fa-search"></i>
-                                    </div>
-                                    <img src="img/blog-img-01.jpg" alt="Sedna blog image"/>
-                                </div>
-                            </a>
-                            <figcaption>
-                            <h2><a href="#" class="blog-category" data-toggle="tooltip" data-placement="top" data-original-title="See more posts">Poetry</a></h2>
-                            <p><a href="#" class="blog-post-title">Read some poetry.<i class="fa fa-angle-right"></i></a></p>
-                            </figcaption>
-                        </figure>
-                    </article>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                     <article class="blog-post">
                         <figure>
                             <a href="img/blog-img-02.jpg" class="single_image">
@@ -281,7 +314,7 @@
                         </figure>
                     </article>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                     <article class="blog-post">
                         <figure>
                             <a href="img/blog-img-03.jpg" class="single_image">
@@ -335,7 +368,7 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     <h3>Check out the zine!</h3>
-                    <p>Ask me for a copy and I'll just like give you one, bro.</p>
+                    <p>Ask me for a copy and I'll give you an extra!</p>
                     <form class="signup-form" action="#" method="POST" role="form">
                         <div class="form-input-group">
                             <i class="fa fa-envelope"></i><input type="text" class="" placeholder="Enter your email" required>
