--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>#GTrainLoveStory</title>
+    <title>#GtrainLoveStory</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -32,7 +32,7 @@
         <section class="navigation">
             <header>
                 <div class="header-content">
-                    <div class="logo"><h3>C&J</h3></div>
+                    <div class="logo"><h3 class="header-logo">C&J</h3></div>
                     <div class="header-nav">
                         <nav>
                             <ul class="primary-nav">
@@ -57,8 +57,8 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center">
-                        <h1><a href="#hashtag">#GTrainLoveStory</a></h1>
-                        <p class="intro">Welcome to the wedding page for Jillian and Chris.</p>
+                        <p class="intro hand">Welcome to the wedding page for Jillian and Chris.</p>
+                        <h1 class="bighand"><a href="#hashtag">#GtrainLoveStory</a></h1>
                     </div>
                     <br>
                     <div class="down-arrow floating-arrow">
@@ -74,14 +74,11 @@
                 <h2>Saturday &middot; Novermber 7 &middot; 2015 &middot; 4:30pm</h2>
                 <h3>Brooklyn, New York</h3>
                 <hr>
-                <h4>Attire: <a href="http://www.realsimple.com/beauty-fashion/clothing/dress-code" target="_blank">semiformal</a> (or whatever suits you, get it?).</h4>
+                <h5>Attire: <a href="http://www.realsimple.com/beauty-fashion/clothing/dress-code" target="_blank">semiformal</a> (or whatever suits you, get it?).</h5>
                 <br>
             </div>
             <div class="row">
                 <div class="col-md-6 intro-feature">
-                    <div class="intro-icon">
-                        <span data-icon="&#xe033;" class="icon"></span>
-                    </div>
                     <div class="intro-content">
                         <p>ceremony &middot; 4:30pm–5pm</p>
                         <h5><a href="http://www.ascensionbrooklyn.org/" target="_blank">Church of the Ascension</a></h5>
@@ -97,12 +94,9 @@
                     </div>
                 </div>
                 <div class="col-md-6 intro-feature">
-                    <div class="intro-icon">
-                        <span data-icon="&#xe030;" class="icon"></span>
-                    </div>
                     <div class="intro-content">
                         <p>dinner &middot; 6–9pm</p>
-                        <h5><a href="http://www.stmazie.com/" target="_blank">Saint Mazie Bar & Supper Club</a></h5>
+                        <h5><a href="http://www.stmazie.com/" target="_blank">Saint Mazie Bar & Supper Club</a> (We'll be in the <a href="http://stcharlescellar.com/">basement</a>)</h5>
                         <p class="tighten">345 Grand Street near Havemeyer Street</p>
                         <p>Near the Metropolitan Avenue stop on the G Train</p>
                         <div class="zoomy1">
@@ -118,7 +112,7 @@
             <hr>
             <div class="col-md-12 text-center">
                 <h3>Ceremony Schedule</h3>
-                <p>The ceremony take place at 4:30pm but guests can begin ariving at 4pm.</p>
+                <p>The ceremony take place at <strong>4:30pm</strong> but guests can begin ariving at <strong>4pm.</strong></p>
                 <ul>
                     <li>prelude</li>
                     <li>processional</li>
@@ -130,7 +124,7 @@
                     <li>refreshments</li>
                 </ul>
                 <br>
-                <p>Rides to Saint Mazie Bar & Supper Club start at 5:15pm.</p>
+                <p>Rides to Saint Mazie Bar & Supper Club start at <strong>5:15pm</strong>.</p>
             </div>
         </div>
     </section>
@@ -143,7 +137,7 @@
                         <ul class="features-stack">
                             <li class="feature-item">
                                 <div class="feature-icon">
-                                    <span data-icon="&#xe03e;" class="icon"></span>
+                                    1.
                                 </div>
                                 <div class="feature-content">
                                     <h5>Forever – is composed of Nows</h5>
@@ -167,7 +161,7 @@
                         </li>
                         <li class="feature-item">
                             <div class="feature-icon">
-                                <span data-icon="&#xe040;" class="icon"></span>
+                                2.
                             </div>
                             <div class="feature-content">
                                 <h5>Count That Day Lost </h5>
@@ -199,20 +193,20 @@
 </div>
 <div class="device-showcase">
     <div class="devices">
-        <div class="ipad-wrap wp1"></div>
-        <div class="iphone-wrap wp2"></div>
+        <div class="ipad-wrap wp3"></div>
+        <div class="iphone-wrap wp3"></div>
     </div>
 </div>
 <div class="responsive-feature-img"><img src="img/devices.png" alt="responsive devices"></div>
 </section>
-<section class="hero-strip section-padding" id="blog">
+<section class="section-padding" id="blog">
     <div class="container">
         <div class="col-md-12 text-center">
             <h2>Hello Brooklyn</h2>
             <p>Here's our guide to the neighborhood for all you out-of-towners. <strong>Note:</strong> a lot of places in Brooklyn are cash only so watch out!</p>
             <a href="https://www.youtube.com/watch?v=8LmPBPWHJu4" target="_blank" class="btn btn-ghost btn-accent btn-large">First, watch this!</a>
             <br><br>
-            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc" width="640" height="480"></iframe>
+            <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank"><img src="img/map.jpg" class="map" alt="North Brooklyn map"></a>
             <br><br>
             <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank">view on Google Maps</a>
         </div>
@@ -233,12 +227,6 @@
                 <p>235 Meeker Avenue between Union Avenue and Lorimer Street, Brooklyn</p>
                 <p>718.625.2100</p>
                 <p><a href="http://www.hotellejolie.com/" target="_blank">visit website</a></p>
-                <br>
-                <h5>Wythe Hotel</h5>
-                <p>Very hip, very Brooklyn. Pricey but oh so perfect.</p>
-                <p>80 Wythe Avenue at North 11th Street, Brooklyn</p>
-                <p>718.460.8000</p>
-                <p><a href="http://wythehotel.com/" target="_blank">visit website</a></p>
                 <br>
                 <h5>McCarren Hotel & Pool</h5>
                 <p>Upscale and right near the park.</p>
@@ -295,6 +283,7 @@
         <div class="row">
             <div class="col-md-5">
                 <div class="feature-list">
+                    <h2>A Little Context</h2>
                     <p>Read about the history of Greenpoint, Church of the Ascension, and Saint Mazie!</p>
                     <p><a href="../assets/north-brooklyn-history.pdf" target="_blank" class="btn btn-ghost btn-accent btn-small">View PDF</a></p>
                 </div>
@@ -346,22 +335,22 @@
                 <p>This is where we share a few of our favorite things and invite you to contribute yours.</p>
             </div>
             <a href="https://open.spotify.com/user/chrisbup/playlist/5nnW9xXgqzLS409lRUNjly" target="_blank">
-                <div class="col-md-4 linker">
+                <div class="col-md-4 light-box box-hover">
                     <h5>Music</h5>
                     <p class="tighten">A little Spotify Playlist as a soundtrack for the weekend.
                     </p>
                 </div>
             </a>
             <a href="https://docs.google.com/spreadsheets/d/1tcP2LHFNipevTnqtIQIz8ml1mMNN8KcneizegfWN7Xw/edit?usp=sharing" target="_blank">
-                <div class="col-md-4 linker">
+                <div class="col-md-4 light-box box-hover">
                     <h5>Recipes</h5>
                     <p class="tighten">These are our faves, now add yours!</p>
                 </div>
             </a>
             <a href="https://docs.google.com/document/d/151MqwgSEeshA_asgdxuYytq90h4wlNQA5V1YSmZJOaM/edit?usp=sharing" target="_blank">
-                <div class="col-md-4 linker">
+                <div class="col-md-4 light-box box-hover">
                     <h5>Poetry</h5>
-                    <p class="tighten">Some you'll recognize, some you may not. Add your favorites and leave your name in a comment.</p>
+                    <p class="tighten">Some poems you'll recognize, some you may not. Add your favorites and leave your name in a comment so we know!</p>
                 </div>
             </a>
         </div>
@@ -370,8 +359,8 @@
 <section class="section-padding" id="hashtag">
     <div class="col-md-8 col-md-offset-2 text-center">
         <h2>What's with the hashtag?</h2>
-        <p>The hashtag is to help collect photos from the evening. If you post any to <a href="https://instagram.com/chrisbup/" target="_blank">Instagram</a>, <a href="https://www.facebook.com/chris.heuberger" target="_blank">Facebook</a>, or <a href="https://twitter.com/chrisbup" target="_blank">Twitter</a>, please tag it with #GtrainLoveStory.</p>
-        <p>Also, join our <a href="https://flic.kr/g/qZ1sq" target="_blank">Flickr group</a> and add any photos you take at the event to our wedding album there. If you post any pics to <a href="https://instagram.com/chrisbup/" target="_blank">Instagram</a>, they will automatically be added to the Flickr album.</p>
+        <p>The hashtag is to help collect photos from the evening. If you post any to <a href="https://instagram.com/chrisbup/" target="_blank">Instagram</a>, <a href="https://www.facebook.com/chris.heuberger" target="_blank">Facebook</a>, or <a href="https://twitter.com/chrisbup" target="_blank">Twitter</a>, please tag it with <strong>#GtrainLoveStory</strong> and they will automatically be added to our wedding album on Flickr.</p>
+        <p>You can also add photos directly to the <a href="https://flic.kr/g/qZ1sq" target="_blank">Flickr allbum</a>.</p>
     </div>
 </section>
 <section class="blog-intro section-padding" id="faq">
@@ -380,15 +369,15 @@
             <div class="col-md-12 text-center">
                 <h2>FAQs</h2>
             </div>
-            <h3>Where can I park?</h3>
+            <h4>Where can I park?</h4>
 
-            <p>For both church and restaurant, the only parking available will be on the street. You should be able to find something relatively nearby but we suggest you give yourself some extra time to find a spot.</p>
+            <p>There are no parking garages near the church or the restaurant. The only parking available near either venue will be on the street. You should be able to find something relatively nearby but we suggest you give yourself some extra time to find a spot.</p>
 
-            <h3>What about my kids?</h3>
+            <h4>What about my kids?</h4>
 
             <p>Unfortunately, due to space restrictions, we can't include kids in the festivities.</p>
 
-            <h3>What if I have a food allergy or dietary restriction?</h3>
+            <h4>What if I have a food allergy or dietary restriction?</h4>
 
             <p>If you have a food allergy, dietary restriction, or any special request, please let us know in your RSVP or contact us anytime and we'll make sure you don't go hungry.</p>
         </div>
@@ -410,7 +399,10 @@
                                 </div>
                             </a>
                             <figcaption>
-                                <p class="blog-post-title">In lieu of a traditional registry, we’ve set up a donation registry with <a href="http://www.earthjustice.org" target="_blank">Earthjustice</a>.</p>
+                                <p class="tighten">In lieu of a traditional registry, we're asking people to make a donation to Earthjustice. You can give <a href="https://secure.earthjustice.org/site/Donation2?df_id=10929&10929.donation=form1&s_subsrc=SubNav" target="_blank">online</a> or over the phone at <strong>415.217.2000</strong> (M-F 12pm–8pm, Eastern Time).</p>
+                                <p class="tighten">Please include either or both of our names and our address:</p>
+                                <p class="tighten"><strong>68 Box Street #2R</strong></p>
+                                <p class="tighten"><strong>Brooklyn, NY 11222</strong></p>
                             </figcaption>
                         </figure>
                     </article>
@@ -447,7 +439,7 @@
         <div class="row">
             <div class="col-md-7">
                 <div class="footer-links">
-                    <p>If you'd like a copy of our wedding zine or have any questions at all, don't hesitate to <a href="mailto:chrisheuberg@gmail.com" target="_blank">email me</a>.</p>
+                    <p>If you'd like a copy of our wedding zine or have any questions at all, don't hesitate to <a href="mailto:chrisheuberg@gmail.com" target="_blank">email me</a>!</p>
                     <ul class="footer-group">
                         <li><a href="#features">event</a></li>
                         <li><a href="#readings">readings</a></li>
